--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,4 +1,23 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block content %}
-<h1>Hhehe</h1>
+<div class="bg p-1">
+    <div class="container text-center my-5">
+        <div class="row">
+            <div class="col-12 col-md-6 text-box">
+                <h1 class="logo-font text-white text-uppercase">
+                    For all <strong>disc golf</strong> lovers
+                </h1>
+                <div class="my-5">
+                    <h4>
+                        <a href="#" class="btn rounded-0 text-uppercase text-white border shop-now-btn">
+                            Shop Now
+                        </a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>        
+</div>
 {% endblock %}
