Added new nav and finish home page image

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,21 +3,21 @@
 
 {% block content %}
 <div class="bg p-1">
-    <div class="container text-center my-5">
+    <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6 text-box">
-                <h1 class="logo-font text-white text-uppercase">
-                    For all <strong>disc golf</strong> lovers
-                </h1>
-                <div class="my-5">
+            <div class="col-12 col-md-8 image-text">
+                <h1 class="logo-font text-white display-1 welcome-text">Welcome</h1>
+                <p class="h2 text-white text-lg-left">Disc Golf Lovers</p>
+                <p class="h4 text-white">You're Home</p>
+                <div class="my-3">
                     <h4>
-                        <a href="#" class="btn rounded-0 text-uppercase text-white border shop-now-btn">
+                        <a href="#" class="btn rounded-pill border-danger text-white  bg-danger shop-now-btn">
                             Shop Now
                         </a>
                     </h4>
                 </div>
             </div>
         </div>
-    </div>        
+    </div>
 </div>
 {% endblock %}
