--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,42 +1,39 @@
-<div class="collapse navbar-collapse" id="main-nav">
+<div class="collapse navbar-collapse bg-gradient-light" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
-        <li class="nav-item d-block d-md-none">
-            <a class="logo-font font-weight-bold nav-link mr-5" href="{% url 'home' %}" id="home-link">
-                Home
-            </a>
-        </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5 border-bottom" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="#" class="dropdown-item">By Price</a>
-                <a href="#" class="dropdown-item ">By Raiting</a>
-                <a href="#" class="dropdown-item">All Products</a>
+                <a href="" class="dropdown-item">Putt & Approach</a>
+                <a href="" class="dropdown-item ">Midrange/Multi</a>
+                <a href="" class="dropdown-item ">Fairway Driver</a>
+                <a href="" class="dropdown-item ">Distance Driver</a>
+                <a href="" class="dropdown-item">Accesories</a>
+                <a href="" class="dropdown-item">All Products</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                On Sale
+            <a class="logo-font font-weight-bold nav-link text-white mr-5 border-bottom" href="#" id="sale-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                On sale
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="#" class="dropdown-item">By Price</a>
-                <a href="#" class="dropdown-item ">By Raiting</a>
-                <a href="#" class="dropdown-item">All Products</a>
+            <div class="dropdown-menu border-0" aria-labelledby="on-sale-link">
+                <a href="" class="dropdown-item">Best Discount</a>
+                <a href="" class="dropdown-item">Best Price</a>
+                <a href="" class="dropdown-item">All Products</a>
             </div>
         </li>
-
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5 border-bottom" href="#">
                 Course Reviews
             </a>
         </li>
-
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#">
-                Contact us
+            <a class="logo-font font-weight-bold nav-link text-white mr-5 border-bottom" href="#">
+                Contact
             </a>
         </li>
+
     </ul>
 </div>
