--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
         </div>
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
         <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-            <li class="list-inline-item dropdown d-lg-inline-block d-sm-none">
+            <li class="list-inline-item dropdown d-none d-lg-inline-block">
                 <a class="text-white nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     <div class="text-center pl-5">
@@ -82,7 +82,7 @@
                 </div>
             </li>
             <li class="list-inline-item">
-                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-white{% endif %} nav-link d-lg-inline-block d-md-none"
+                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-white{% endif %} nav-link d-none d-lg-inline-block"
                     href="#">
                     <div class="text-center">
                         <div><i class="fas fa-shopping-cart fa-lg"></i></div>
