--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -6,23 +6,90 @@
 
 
 {% block content %}
-<div class="container-fluid product-container">
+<div class="container-fluid product-container ">
     <div class="row">
         <div class="col text-center">
             <h2 class="logo-font">Products</h2>
+            <hr class="w-50 mb-1">
         </div>
     </div>
-    <div class="row text-center">
-        <div class="col-4">
-            {{products}}
+    <div class="row pt-4">
+        <div class="col-lg-12 home-link">
+            <a href="{% url 'home' %}" class="text-black">
+            <i class="fas fa-home"></i> Home </a>
+            <span>> Shop</span>
+            <div class="sort-select-wrapper d-flex d-inline-flex w-50">
+                <select id="sort-selector"
+                    class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                    <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...
+                    </option>
+                    <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price
+                        (low to high)</option>
+                    <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price
+                        (high to low)</option>
+                    <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>
+                        Rating (low to high)</option>
+                    <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>
+                        Rating (high to low)</option>
+                    <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name
+                        (A-Z)</option>
+                    <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name
+                        (Z-A)</option>
+                    <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>
+                        Category (A-Z)</option>
+                    <option value="category_desc"
+                        {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
+                </select>
+            </div>
         </div>
-        <div class="col-4">
-            {{products}}
+    </div>
+    </div>
+    <div class="row">
+        {% for product in products %}
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-5">
+        <div class="card border-0">
+            {% if product.image %}
+            <a href="">
+                <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
+            </a>
+            {% else %}
+            <a href="">
+                <img class="card-img-top" src="{{ MEDIA_URL}}noimageplaceholder.png" alt="{{ product.name }}">
+            </a>
+            {% endif %}
+            <div class="card-body border">
+              <h5 class="card-title">{{ product.name }}</h5>
+              <p class="card-text">{{ product.description }}</p>
+              <p class="card-text">{{ product.price }}$</p>
+              <p class="card-text">{{ product.raiting }} / 5 <i class="fas fa-star"></i></p>
+            </div>
+          </div>
         </div>
-        <div class="col-4">
-            {{products}}
-        </div>
+        {% endfor %}
     </div>
 </div>
+
+<script>
+    $('#sort-selector').change(function () {
+        let selector = $(this);
+        let currentUrl = new URL(window.location);
+
+        let selectedVal = selector.val();
+        if (selectedVal != "reset") {
+            let sort = selectedVal.split("_")[0];
+            let direction = selectedVal.split("_")[1];
+
+            currentUrl.searchParams.set("sort", sort);
+            currentUrl.searchParams.set("direction", direction);
+
+            window.location.replace(currentUrl);
+        } else {
+            currentUrl.searchParams.delete("sort");
+            currentUrl.searchParams.delete("direction");
+
+            window.location.replace(currentUrl);
+        }
+    })
+</script>
 
 {% endblock %}
