--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,5 +3,18 @@
 }
 
 .product-container {
-    margin-top: 30vh !important;
+    margin-top: 20vh !important;
+}
+
+.home-link {
+    padding-left: 30px;
+}
+
+@media (max-width: 991px) {
+    .product-container {
+        margin-top: 30vh !important;
+    }
+    .sort-select-wrapper {
+        width: 100% !important;
+    }
 }
