Added product_detail view and start on template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,7 +11,7 @@
                 <p class="h4 text-white">You're Home</p>
                 <div class="my-3">
                     <h4>
-                        <a href="#" class="btn rounded-pill border-danger text-white  bg-danger shop-now-btn">
+                        <a href="{% url 'products' %}" class="btn rounded-pill border-danger text-white  bg-danger shop-now-btn">
                             Shop Now
                         </a>
                     </h4>
