--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,9 +12,15 @@
 
 @media (max-width: 991px) {
     .product-container {
-        margin-top: 30vh !important;
+        margin-top: 20vh !important;
     }
     .sort-select-wrapper {
         width: 100% !important;
     }
+
+    .product-details-box {
+        margin-bottom: 30vh;
+    }
+
 }
+
