--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
                 <h2 class="logo-font text-white my-0"><strong>Disc Golf</strong></h2>
             </a>
         </div>
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 d-none d-lg-inline-block">
             <form method="GET" action="">
                 <div class="input-group w-100">
                     <input class="form-control border border-secondary rounded-0" type="text" name="q" placeholder="Search for products">
