--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -7,12 +7,6 @@
 
 {% block content %}
 <div class="container-fluid product-container ">
-    <div class="row">
-        <div class="col text-center">
-            <h2 class="logo-font">Products</h2>
-            <hr class="w-50 mb-1">
-        </div>
-    </div>
     <div class="row pt-4">
         <div class="col-lg-12 home-link">
             <a href="{% url 'home' %}" class="text-black">
@@ -43,17 +37,22 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col text-center">
+            <h2 class="logo-font">Products</h2>
+            <hr class="w-50 mb-1">
+        </div>
     </div>
     <div class="row">
         {% for product in products %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-5">
         <div class="card border-0">
             {% if product.image %}
-            <a href="">
+            <a href="{% url 'product_detail' product.id %}">
                 <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
             </a>
             {% else %}
-            <a href="">
+            <a href="{% url 'product_detail' product.id %}">
                 <img class="card-img-top" src="{{ MEDIA_URL}}noimageplaceholder.png" alt="{{ product.name }}">
             </a>
             {% endif %}
