Added view to delete products and create first toast page toast_success

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -60,7 +60,7 @@
               <h5 class="card-title">{{ product.name }}</h5>
               <p class="card-text">{{ product.description }}</p>
               <p class="card-text">{{ product.price }}$</p>
-              <p class="card-text">{{ product.raiting }} / 5 <i class="fas fa-star"></i></p>
+              <p class="card-text">{{ product.rating }} / 5 <i class="fas fa-star"></i></p>
             </div>
           </div>
         </div>
