--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -24,7 +24,7 @@
                     <div class="small mb-1"><strong>Sku:</strong> {{ product.sku }}</div>
                     <h1 class="display-5 fw-bolder">{{ product.name }}</h1>
                     <div class="fs-5 mb-5">
-                        <p><strong>Rating:</strong> {{product.raiting}} / 5  <i class="fas fa-star"></i></p>
+                        <p><strong>Rating:</strong> {{product.rating}} / 5  <i class="fas fa-star"></i></p>
                         {% if product.discount_percentage %}
                         <span class="text-decoration-line-through text-danger"><strong class="text-black">Discounted Price:</strong> {{ product.get_discounted_price|floatformat:2 }}$</span>
                         {% else %}
@@ -43,6 +43,14 @@
                             </a>
                             <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
                         </div>
+                        {% if user.is_superuser %}
+                            <div class="col{% if s %}-12 mt-2{% endif %}">
+                                <a href="{% url 'delete_product' product.id %}" class="btn btn-danger rounded-0 mt-5">
+                                        <i class="fas fa-trash"></i>
+                                    <span class="text-uppercase">Delete Product</span>
+                                </a>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
