--- a/templates/base.html
+++ b/templates/base.html
@@ -115,6 +115,7 @@
     {% for message in messages %}
         {% with message.level as level %}
             {% if level == 40 %}
+                {% include 'includes/toasts/toast_error.html' %}
             {% elif level == 30 %}
             {% elif level == 25 %}
                 {% include 'includes/toasts/toast_success.html' %}
