--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
                 <div class="dropdown-menu border-0" aria-labelledby="user-options">
                     {% if request.user.is_authenticated %}
                     {% if request.user.is_superuser %}
-                    <a href="#" class="dropdown-item">Product Management</a>
+                    <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
                     {% endif %}
                     <a href="" class="dropdown-item">My Profile</a>
                     <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
@@ -111,15 +111,17 @@
 </header>
 
 {% if messages %}
-<div class="message-container">
+<div class="message-container fixed">
     {% for message in messages %}
         {% with message.level as level %}
             {% if level == 40 %}
                 {% include 'includes/toasts/toast_error.html' %}
             {% elif level == 30 %}
+            {% include 'includes/toasts/toast_warning.html' %}
             {% elif level == 25 %}
                 {% include 'includes/toasts/toast_success.html' %}
             {% else %}
+            {% include 'includes/toasts/toast_info.html' %}
             {% endif %}
         {% endwith %}
     {% endfor %}
