--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -12,7 +12,7 @@
             <span>> {{product.name}}</span>
         </div>
     </div>
-    <section class="py-5">
+    <section>
         <div class="container px-4 px-lg-5 my-5">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 {% if product.image %}
