--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -57,9 +57,13 @@
             </a>
             {% endif %}
             <div class="card-body border">
-              <h5 class="card-title">{{ product.name }}</h5>
-              <p class="card-text">{{ product.description }}</p>
-              <p class="card-text">{{ product.price }}$</p>
+                <h5 class="card-title">{{ product.name }}</h5>
+                <p class="card-text">{{ product.description }}</p>
+                {% if product.discount_percentage %}
+                    <p class="card-text text-danger">{{ product.get_discounted_price| floatformat:2}}$</p>
+                {% else %}
+                    <p class="card-text">{{ product.price }}$</p>
+                {% endif %}
               <p class="card-text">{{ product.rating }} / 5 <i class="fas fa-star"></i></p>
             </div>
           </div>
