--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col text-center">
                 <h2 class="logo-font">Shopping Cart</h2>
-                <hr class="mb-1">
+                <hr class="mb-1 w-50">
             </div>
         </div>
         <div class="row">
