--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -4,7 +4,7 @@
 {% block extra_css %}
 <link rel="stylesheet" href="{% static  'css/style.css' %}">
 {% endblock %}
-
+ 
 {% block content %}
  {% if user.is_superuser %}
     <div class="col product-form">
@@ -19,7 +19,7 @@
                 {% csrf_token %}
                 {{ form|crispy }}
                 <button type="submit" class="btn btn-black rounded-0">Create Product</button>
-                <button class="btn btn-outline-black rounded-0"><a href="{% url 'products' %}">Back to Products</a></button>
+                <button class="btn rounded-0"><a href="{% url 'products' %}">Back to Products</a></button>
             </form>
         </div>
     </div>
