--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                 </div>
             </form>
         </div>
-        <div class="col-12 col-lg-4 mt-3 py-1 py-lg-0">
+        <div class="col-12 col-lg-4 mt-3 py-1 py-lg-0 d-none d-lg-inline-block">
         <ul class="list-inline list-unstyled text-center text-lg-right my-0">
             <li class="list-inline-item dropdown d-none d-lg-inline-block">
                 <a class="text-white nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
