--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     <div class="container-fluid product-container">
-        <div class="row">
+        <div class="row pb-5 pt-2">
             <div class="col text-center">
                 <h2 class="logo-font">Shopping Cart</h2>
                 <hr class="mb-1 w-50">
@@ -14,6 +14,66 @@
         <div class="row">
             <div class="col">
                 {% if cart_items %}
+                    <div class="table-responsive table-sm">
+                        <table class="table table-sm table-borderless">
+                            <thead class="text-black">
+                                <tr>
+                                    <th scope="col"></th>
+                                    <th scope="col">Product Info</th>
+                                    <th scope="col">Price</th>
+                                    <th scope="col">Qty</th>
+                                    <th scope="col">Subtotal</th>
+                                </tr>
+                            </thead>
+
+                            {% for item in cart_items %}
+                                <tr>
+                                    <td class="p-3 w-25">
+                                        {% include 'cart/product_image.html' %}
+                                    </td>
+                                    <td class="py-3">
+                                        <a href="{% url 'product_detail' item.product.id %}" class="text-black">
+                                            <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                        </a>
+                                        <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                                    </td>
+                                    <td class="py-3">
+                                        {% include 'cart/product_price.html' %}
+                                    </td>
+                                    <td class="py-3 w-25">
+                                        <p class="my-0">{{ item.quantity }}</p>
+                                    </td>
+                                    <td class="py-3">
+                                        {% include 'cart/product_subtotal.html' %}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            <tr>
+                                <td colspan="5" class="pt-5 text-right">
+                                    <h6><strong>Cart Total: ${{ total|floatformat:2 }}</strong></h6>
+                                    <h6>Shipping: ${{ shipping|floatformat:2 }}</h6>
+                                    <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
+                                    {% if free_shipping_delta > 0 %}
+                                        <p class="mb-1 text-danger">
+                                            You could get free delivery by spending just <strong>${{ free_shipping_delta }}</strong> more
+                                        </p>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="5" class="text-right">
+                                    <a href="{% url 'products' %}" class="btn btn-black rounded-0">
+                                        <i class="fas fa fa-chevron-left"></i>
+                                        <span>Keep Shopping</span>
+                                    </a>
+                                    <a href="" class="btn btn-primary rounded-0 ">
+                                        <i class="fas fa-credit-card"></i>
+                                        <span>Checkout</span>
+                                    </a>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
                 {% else %}
                     <p class="lead">Your cart is empty.</p>
                     <a href="{% url 'products' %}" class="btn btn-black rounded-0">
