--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -22,7 +22,7 @@
                 <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="{{ MEDIA_URL }}noimageplaceholder.png"
                         alt="{{ product.name }}" /></div>
                 {% endif %}
-                <div class="col-md-6 product-details-box">
+                <div class="col-md-6">
                     <div class="small mb-1"><strong>Sku:</strong> {{ product.sku }}</div>
                     <h1 class="display-5 fw-bolder">{{ product.name }}</h1>
                     <div class="fs-5 mb-2">
