--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col text-center">
+        <div class="col text-center page-header">
             <h2 class="logo-font">Products</h2>
             <hr class="w-50 mb-1">
         </div>
