--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -8,8 +8,8 @@
 {% block content %}
  {% if user.is_superuser %}
     <div class="col product-form">
-        <div class="row py-3">
-            <div class="col text-center">
+        <div class="row">
+            <div class="col text-center page-header">
                 <h2 class="logo-font">Add Product</h2>
                 <hr class="w-50 mb-1">
             </div>
