Added default value 0 to discount_percentage to filter discounted products

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -55,7 +55,7 @@
                                     <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
                                     {% if free_shipping_delta > 0 %}
                                         <p class="mb-1 text-danger">
-                                            You could get free delivery by spending just <strong>${{ free_shipping_delta }}</strong> more
+                                            You could get free delivery by spending just <strong>${{ free_shipping_delta|floatformat:2 }}</strong> more
                                         </p>
                                     {% endif %}
                                 </td>
