--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -30,17 +30,18 @@
                         {% if product.discount_percentage %}
                         <span class="text-decoration-line-through text-danger"><strong class="text-black">Discounted
                                 Price:</strong> {{ product.get_discounted_price|floatformat:2 }}$</span>
+                                <small class="text-muted"><del>{{product.price|floatformat:2 }}</del></small>
                         {% else %}
                         <span class="text-decoration-line-through"><strong>Price:</strong>{{product.price}}$</span>
                         {% endif %}
                     </div>
                     <p class="lead"><strong>Product Description:</strong></p>
-                    <p class="border">{{product.description}}</p>
+                    <p>{{product.description}}</p>
                     <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-12">
-                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <p><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
                                     <div class="input-group">
                                         <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
@@ -49,13 +50,13 @@
                             </div>
 
                             <div class="col-12">
-                                <a href="{% url 'products' %}" class="btn rounded-0 mt-5">
+                                <a href="{% url 'products' %}" class="btn rounded-0">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" class="btn btn-black rounded-0 text-uppercase" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
