--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
             </a>
         </div>
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 d-none d-lg-inline-block">
-            <form method="GET" action="">
+            <form method="GET" action="{% url 'products' %}">
                 <div class="input-group w-100">
                     <input class="form-control border border-secondary rounded-0" type="text" name="q" placeholder="Search for products">
                     <div class="input-group-append">
