--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,4 +20,41 @@
         </div>
     </div>
 </div>
+<section>
+    <div class="container-fluid product-container">
+        <div class="row">
+            <div class="col text-center page-header">
+                <h2 class="logo-font">Best Rated Discs</h2>
+                <hr class="w-50 mb-1">
+            </div>
+        </div>
+        <div class="row">
+            {% for product in products %}
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-5">
+            <div class="card border-0">
+                {% if product.image %}
+                <a href="{% url 'product_detail' product.id %}">
+                    <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
+                </a>
+                {% else %}
+                <a href="{% url 'product_detail' product.id %}">
+                    <img class="card-img-top" src="{{ MEDIA_URL}}noimageplaceholder.png" alt="{{ product.name }}">
+                </a>
+                {% endif %}
+                <div class="card-body border">
+                    <h5 class="card-title">{{ product.name }}</h5>
+                    <p class="card-text">{{ product.description |truncatechars:154 }}</p>
+                    {% if product.discount_percentage %}
+                        <p class="card-text text-danger">{{ product.get_discounted_price| floatformat:2}}$</p>
+                    {% else %}
+                        <p class="card-text">{{ product.price }}$</p>
+                    {% endif %}
+                  <p class="card-text">{{ product.rating }} / 5 <i class="fas fa-star"></i></p>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
 {% endblock %}
