--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,6 +3,7 @@
 body, html {
     height: 100%;
     font-family: Oswald, sans-serif;
+    scroll-behavior: smooth;
   }
   
   .bg { 
@@ -23,6 +24,15 @@ body, html {
 .page-header {
     padding-top: 2vh !important;
 }
+
+/* Back to top button */
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+  }
 
 
 /* Home page */
